# everybodySayHello

./: .gitignore  .gitmodules  README.md  makefile
DirectInterop/: .gitignore  makefile
DirectInterop/src/: expectedOutput.txt
DirectInterop/src/C/: everybodySayHello.c  libguilehello.c  libluajithello.c  libperlhello.c  libpythonhello.c
DirectInterop/src/Clojure/: hello_from_clojure.cpp
DirectInterop/src/Cpp/: libcpphello.cpp
DirectInterop/src/Haskell/: CHANGELOG.md  HaskellHello.cabal
DirectInterop/src/Haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
DirectInterop/src/Haskell/src/: HaskellHello.hs  poznamky.md  wrapper.c
DirectInterop/src/Java/: helloJava.java  hello_from_java.c
DirectInterop/src/Rust/rust_hello/: Cargo.toml
DirectInterop/src/Rust/rust_hello/src/: rust_hello.rs
DirectInterop/src/guile/: helloGuile.scm
DirectInterop/src/lua/: helloLuajit.lua
DirectInterop/src/perl/: helloPerl.pl
DirectInterop/src/python/: helloPython.py
RustInterop/: README.md  makefile
RustInterop/src/: expectedOutput.txt
RustInterop/src/C/: everybodySayHello.c
RustInterop/src/Rust/lua_hello_from_rust/: Cargo.toml
RustInterop/src/Rust/python_hello_from_rust/: Cargo.toml
RustInterop/src/Rust/python_hello_from_rust/src/: python_hello_from_rust.rs
RustInterop/src/Rust/rust_hello_main_component/: Cargo.toml
RustInterop/src/python/: helloPython.py
src/C/: everybodySayHello.c
src/Rust/lua_hello_from_rust/: Cargo.toml
src/Rust/lua_hello_from_rust/src/: lua_hello_from_rust.rs
src/Rust/rust_hello_main_component/: Cargo.toml
src/Rust/rust_hello_main_component/src/: rustHello.rs  rust_hello_main_component.rs
src/lua/: hello.lua  helloLuajit.lua
