cabal-version:      2.4
name:               HaskellHello
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Tomas Krulis
maintainer:         krulis.tomas.tk@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

foreign-library haskellhello
    type:             native-shared
    lib-version-info: 0:1:0

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0,
                      haskell-say ^>=1.0.0.0
    hs-source-dirs:   src
    c-sources:        src/wrapper.c
    default-language: Haskell2010
