[package]
name = "rust_hello_main_component"
version = "0.1.0"
authors = ["Tomas Krulis <krulis.tomas.tk@gmail.com>"]
edition = "2018"

[lib]
name = "rust_hello_main_component"
path = "src/rust_hello_main_component.rs"
crate-type = ["staticlib"] # cdylib for dynamically lined library

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.94"
