[package]
name = "rust_hello"
version = "0.1.0"
authors = ["Tomas Krulis <krulis.tomas.tk@gmail.com>"]
edition = "2018"

[lib]
name = "rust_hello"
path = "src/rust_hello.rs"
crate-type = ["cdylib"] # "cdylib" for dynamically linked library, "staticlib" for statically linked library

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.94"
