[package]
name = "python_hello_from_rust"
version = "0.1.0"
authors = ["Tomas Krulis <krulis.tomas.tk@gmail.com>"]
edition = "2018"

[lib]
name = "python_hello_from_rust"
path = "src/python_hello_from_rust.rs"
crate-type = ["cdylib"] # "cdylib" for dynamically linked library, "staticlib" for statically linked library

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.94"

[dependencies.pyo3]
version = "0.13.2"
features = ["auto-initialize"]
